[package]
name = "terminal-tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
crossterm = "0.26.1"
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "test-util", "macros", "time"] }
term_size = "0.3"
signal-hook = "0.3"
ctrlc = "3.3"
rodio = "0.13"